# SingleWindowLibrary

./: .gitignore  CMakeLists.txt  README.md  main.cpp
SingleWindowLibrary/: core.cpp  rect.cpp  scene.cpp  texture.cpp
SingleWindowLibrary/Headers/: swl.h
